objects/Out_Of_Office_Comment__c.object
<CustomObject>
    <description>Store all the Out Of Office Comments for processing later.  This is not meant for regular user to see.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feed__c</fullName>
        <label>Feed</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessResult__c</fullName>
        <label>ProcessResult</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Out Of Office Comment</label>
    <nameField>
        <displayFormat>OOO-{0}</displayFormat>
        <label>OOO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>